--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
